# AetherKiri

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  build_android_windows.ps1  build_release.bat  latest_log_path.txt
.github/workflows/: android-vcpkg.yml  android.yml  ios.yml  linux.yml  macos.yml  pages.yml
apps/flutter_app/lib/: main.dart
bridge/engine_api/: CMakeLists.txt
bridge/engine_api/include/: engine_api.h  engine_options.h
bridge/engine_api/src/: engine_api.cpp
bridge/flutter_engine_bridge/lib/: flutter_engine_bridge.dart
cpp/core/base/: CMakeLists.txt  EventIntf.cpp  EventIntf.h  KAGParser.cpp  KAGParser.h  ScriptMgnIntf.cpp  ScriptMgnIntf.h  StorageIntf.cpp  (+5 more)
cpp/plugins/: CMakeLists.txt  addFont.cpp  dummy_plugin_stubs.cpp  extNagano.cpp  krkrlive2d_stub.cpp  menuExt.cpp  multiimage.cpp  packinone.cpp
cpp/plugins/motionplayer/: CMakeLists.txt  D3DAdaptor.h  D3DEmoteModule.h  EmotePlayer.cpp  EmotePlayer.h  HitTestInternal.h  MotionNode.h  NodeTree.cpp  NodeTree.h  Player.h  PlayerCore.cpp  PlayerInternal.h  PlayerQuery.cpp  PlayerRender.cpp  PlayerResource.cpp  PlayerUpdateLayers.cpp  ResourceManager.cpp  ResourceManager.h  RuntimeSupport.cpp  RuntimeSupport.h  SeparateLayerAdaptor.cpp  SeparateLayerAdaptor.h  SourceCache.h  main.cpp
doc/: motion_emoteplayer_migration_plan.md  motionplayer_core_gap_audit.txt
docs/: CNAME
tests/: CMakeLists.txt
tests/unit-tests/plugins/: CMakeLists.txt  motionplayer-dll.cpp
vcpkg/triplets/: android-dynamic-libs.cmake  arm64-ios.cmake  arm64-osx.cmake  x64-osx.cmake
(+105 files in other folders)
